--- a/src/docs/demos/tests/test-0.css
+++ b/src/docs/demos/tests/test-0.css
@@ -78,8 +78,8 @@ body {
 h1, .h1,
 h2, .h2,
 h3, .h3 {
-  margin-top: 1.238rem;
-  margin-bottom: 1rem;
+  margin-top: 2.619rem;
+  margin-bottom: 1.238rem;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 600;
   font-style: normal;
@@ -92,8 +92,8 @@ h3, .h3 {
 h4, .h4,
 h5, .h5, .lead,
 h6, .h6 {
-  margin-top: 1rem;
-  margin-bottom: 0.809rem;
+  margin-top: 1.238rem;
+  margin-bottom: 1rem;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
   font-style: normal;
@@ -127,7 +127,7 @@ h6, .h6 {
   opacity: 0.75; }
 
 p {
-  margin-bottom: 0.809rem; }
+  margin-bottom: 1rem; }
   p:last-child {
     margin-bottom: 0 !important; }
 
